# packages/api/src/index.ts
@@ -46,3 +46,4 @@ export * from './generated/api-keys/api-keys'
 export * from './generated/health/health'
 export * from './generated/demo/demo'
 export * from './generated/dashboard/dashboard'
+export * from './generated/platform-products/platform-products'
